# ama-sdk

./: index.html  readme.md
examples/c_api/SimpleXMA/: CMakeLists.txt  README.md  build.sh
examples/c_api/SimpleXMA/enc/: CMakeLists.txt  amaconf.h  main.c  test.sh
examples/c_api/SimpleXMA/lib/: CMakeLists.txt  amalib.c  amalib.h
examples/gRPC/: CMakeLists.txt  README.md  test.sh
examples/gRPC/bindings/: CMakeLists.txt  common.cmake
examples/gRPC/bindings/cpp_server/: CMakeLists.txt  build.sh  xmaif.cpp
examples/gRPC/bindings/protos/: xmaif.proto
examples/gRPC/bindings/python_client/: CMakeLists.txt  decoder_xmaif_client.py  encoder_xmaif_client.py
examples/gRPC/docker/: build.sh  dockerfile
examples/gRPC/tunnel/: CMakeLists.txt  accel_if.c  tap.sh
latest/: .buildinfo  c_apis.html  card_management.html  encoder_comp_matrix.html  examples.html  genindex.html  getting_started_on_prem.html  git_hub.html  index.html  migration.html  package_feed.html  preview.html  searchindex.js  specs_and_features.html  troubleshooting.html  unified_logging.html  using_ffmpeg.html  using_gstreamer.html
latest/_static/: documentation_options.js
latest/examples/amf/: amf_encoder.html
latest/examples/ffmpeg/: filters.html  quality_analysis.html
latest/examples/gstreamer/: filters.html  tutorials.html  xabrladder.html  xcompositor.html
latest/examples/xma/: xma_apps.html
qwertyuiopLKJHGFDSA1234567890/: index.html
qwertyuiopLKJHGFDSA1234567890/v0.0/: .buildinfo  c_apis.html  card_management.html  examples.html  genindex.html  getting_started_on_prem.html  index.html  managing_compute_resources.html  objects.inv  package_feed.html  release_notes.html  search.html  searchindex.js  tuning_pipeline_latency.html  tuning_video_quality.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
qwertyuiopLKJHGFDSA1234567890/v0.0msft/: c_apis.html  card_management.html  examples.html  genindex.html  getting_started_on_prem.html  index.html  managing_compute_resources.html  objects.inv  package_feed.html  release_notes.html  search.html  searchindex.js  tuning_pipeline_latency.html  tuning_video_quality.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
qwertyuiopLKJHGFDSA1234567890/v0.3/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
qwertyuiopLKJHGFDSA1234567890/v0.3msft/: .buildinfo  c_apis.html  card_management.html  examples.html  genindex.html  getting_started_on_prem.html  index.html  managing_compute_resources.html  migration.html  objects.inv  package_feed.html  release_notes.html  search.html  searchindex.js  tuning_pipeline_latency.html  tuning_video_quality.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
qwertyuiopLKJHGFDSA1234567890/v1.1/: .buildinfo  c_apis.html  card_management.html  encoder_comp_matrix.html  examples.html  genindex.html  getting_started_on_prem.html  index.html  managing_compute_resources.html  migration.html  objects.inv  package_feed.html  preview.html  release_notes.html  search.html  searchindex.js  specs_and_features.html  troubleshooting.html  tuning_pipeline_latency.html  tuning_video_quality.html  unified_logging.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
qwertyuiopLKJHGFDSA1234567890/v1.1ea/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sources/: source_access.md
utils/: README.md
utils/Parse_Logs/: README.md  parse_logs.py
utils/Split_and_Stich/: README.md  transcode_split_and_stitch.py
v1.0/: .buildinfo  c_apis.html  card_management.html  examples.html  genindex.html  getting_started_on_prem.html  index.html  managing_compute_resources.html  migration.html  objects.inv  package_feed.html  release_notes.html  search.html  searchindex.js  specs_and_features.html  troubleshooting.html  tuning_pipeline_latency.html  tuning_video_quality.html  unified_logging.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
v1.0/_static/: documentation_options.js
v1.0/examples/xma/: xma_apps.html
v1.1.1/: .buildinfo  c_apis.html  card_management.html  encoder_comp_matrix.html  examples.html  genindex.html  getting_started_on_prem.html  index.html  managing_compute_resources.html  migration.html  objects.inv  package_feed.html  preview.html  release_notes.html  search.html  searchindex.js  specs_and_features.html  troubleshooting.html  tuning_pipeline_latency.html  tuning_video_quality.html  unified_logging.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
v1.1.1/_static/: documentation_options.js
v1.1.2/: .buildinfo  announcements.html  c_apis.html  card_management.html  encoder_comp_matrix.html  examples.html  genindex.html  getting_started_on_prem.html  git_hub.html  index.html  managing_compute_resources.html  migration.html  objects.inv  package_feed.html  release_notes.html  search.html  searchindex.js  specs_and_features.html  troubleshooting.html  tuning_pipeline_latency.html  tuning_video_quality.html  unified_logging.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
v1.1.2/_static/: documentation_options.js
v1.2/: .buildinfo  announcements.html  c_apis.html  card_management.html  encoder_comp_matrix.html  examples.html  genindex.html  getting_started_on_prem.html  git_hub.html  index.html  managing_compute_resources.html  migration.html  objects.inv  package_feed.html  preview.html  release_notes.html  search.html  searchindex.js  specs_and_features.html  troubleshooting.html  tuning_pipeline_latency.html  tuning_video_quality.html  unified_logging.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
v1.2.1/: c_apis.html  encoder_comp_matrix.html  genindex.html  getting_started_on_prem.html  git_hub.html  index.html  managing_compute_resources.html  migration.html  objects.inv  preview.html  release_notes.html  search.html  searchindex.js  specs_and_features.html  tuning_pipeline_latency.html  tuning_video_quality.html  using_ffmpeg.html  using_gstreamer.html  virtualization.html
v1.2/_static/: documentation_options.js
(+81 files in other folders)
